# epub-reader

./: Cargo.toml  README.md  rustfmt.toml
epub-rs/: Cargo.toml
epub-rs/src/: archive.rs  doc.rs  lib.rs  xmlutils.rs
epub-rs/tests/: read.rs
reader/: Cargo.toml  README.md  epub-reader.desktop
reader/src/: cba.rs  main.rs  reader.js  util.rs
reader/templates/: cbreader.xml  content_styles.css  reader.css  reader.xml
slime/: Cargo.toml  TODO.md
slime/src/: lib.rs  xdg.rs
slime/src/parser/: ini.rs  mod.rs
slime/src/xdg/: dirs.rs
slime/temporaryting/: util.rs
slime/temporaryting/xdg-utils/: Cargo.toml
slime/temporaryting/xdg-utils/src/: lib.rs
src/: content_styles.css  index.js  index.xhtml  main.rs  reader.js  styles.css  util.rs
templates/: content_styles.css  reader.xml
xdg-utils/: Cargo.toml
xdg-utils/src/: lib.rs
