cargo-features = ["edition2024"]
[package]
license = "Unlicense"
name = "epub"
version = "2.1.2"
edition = "2024"

[dependencies]
xml-rs = "0.8.20"
percent-encoding = "2.3.1"
thiserror = "1.0.59"
zip = { version = "1.1.3", default-features = false, features = ["deflate"] }

[dependencies.regex]
version = "1.10.4"
default-features = false
# regex currently requires the standard library, you must re-enable it.
features = [
    "std",
    "unicode",
    "perf-cache",
    "perf-dfa",
    "perf-inline",
]
