[package]
name = "epub-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.5"
epub = { path = "../epub-rs" }
slime = { git = "https://git.bleeding.pink/decator/slime.git" }
log = "0.4.22"
rinja = { version = "0.3.5", default-features = false, features = ["humansize", "urlencode"] }
tiny_http = "0.12.0"
xmlparser = "0.13.6"
